# doctrust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  roadmap.md  security-considerations.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_finding.md  spec_change.md
RELEASES/: 0.1.0.md  0.2.0.md
conformance/: README.md
conformance/v0.2.0/: manifest.json  payment-expired.json  payment-missing-communication.json  payment-tampered-iban.json  payment-valid.json
demo/: README.md  repro.mjs
examples/: invoice.json  trust-registry.json  verification-flow.md
examples/upload/: qr-compact.txt
governance/: trust-registry.md
schemas/: invoice-profile.schema.json  payment-profile.schema.json  signed-document-payload.schema.json
sdk-dotnet/: README.md
sdk-dotnet/src/DocumentTrustPayload/: Canonicalize.cs  Crypto.cs  DocumentTrustPayload.cs  DocumentTrustPayload.csproj  Errors.cs  PaymentProfile.cs  Qr.cs  TrustRegistry.cs  Verification.cs
sdk-dotnet/tests/: DocumentTrustPayload.Tests.csproj  Program.cs
sdk-js/: README.md  package.json
sdk-js/src/: canonicalize.js  crypto.js  errors.js  index.js  qr.js  sign.js  trust-registry.js  verify.js
sdk-js/test/: qr.test.js  reference.test.js  trust-registry.test.js
sdk-python/: README.md  pyproject.toml
sdk-python/document_trust_payload/: __init__.py  canonicalize.py  crypto.py  errors.py  qr.py  sign.py  trust_registry.py  verify.py
sdk-python/tests/: test_reference.py
spec/: v1.md
