[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "document-trust-payload"
version = "0.1.0"
description = "Reference implementation for the Document Trust Payload v1 specification"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["document_trust_payload*"]
